--- a/src/components/JobsList/JobsList.css
+++ b/src/components/JobsList/JobsList.css
@@ -4,3 +4,34 @@
   flex-grow: 1;
   flex-wrap: wrap;
 }
+
+.filter-container {
+  display: flex;
+  gap: 10px;
+  padding: 21px;
+  flex-wrap: wrap;
+}
+
+.filter-container .label {
+  height: 20px;
+  font-size: 12px;
+}
+
+.select-roles {
+  min-width: 200px;
+  flex-grow: 1;
+}
+
+.search-input {
+  height: 38px;
+  background-color: hsl(0, 0%, 100%);
+  border-color: hsl(0, 0%, 80%);
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  box-sizing: border-box;
+  padding: 2px 8px;
+  color: hsl(0, 0%, 50%);
+  font-weight: 500;
+  font-size: 14px;
+}
