--- a/src/components/JobsList/JobsList.css
+++ b/src/components/JobsList/JobsList.css
@@ -19,8 +19,13 @@
 }
 
 .select-roles {
-  min-width: 200px;
+  min-width: 250px;
   flex-grow: 1;
+}
+
+.select-exp,
+.select-mode {
+  min-width: 150px;
 }
 
 .search-input {
@@ -35,4 +40,14 @@
   color: hsl(0, 0%, 50%);
   font-weight: 500;
   font-size: 14px;
+  min-width: 250px;
+  width: 100%;
+}
+
+@media (max-width: 600px) {
+  .select-container,
+  .input-container {
+    width: 100% !important;
+    flex-grow: 1;
+  }
 }
